--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
 jobs:
   build:
     docker:
-      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
+      - image: 'redisfab/rmbuilder:6.0.1-x64-bionic'
     steps:
       - checkout
       - run:
@@ -26,12 +26,18 @@ jobs:
 
       - run:
           name: Install prerequisite
-          command: >-
-            pip install git+https://github.com/RedisGraph/redisgraph-py.git@master &&
-            pip install psutil behave &&
-            pip install redis-py-cluster &&
-            pip install git+https://github.com/RedisLabsModules/RLTest.git@master &&
-            apt-get update; apt-get install -y automake peg libtool autoconf cmake valgrind astyle
+          command: |
+            apt-get -qq update
+            apt-get install -y --no-install-recommends ca-certificates wget git
+            apt-get install -y --no-install-recommends python python-pip python-psutil
+            apt-get install -y --no-install-recommends build-essential cmake m4 automake autoconf libtool peg libgomp1 valgrind astyle
+            python -m pip install wheel
+            python -m pip install setuptools --upgrade
+            python -m pip install git+https://github.com/Grokzen/redis-py-cluster.git@master
+            python -m pip install git+https://github.com/RedisLabsModules/RLTest.git@master
+            python -m pip install git+https://github.com/RedisLabs/RAMP@master
+            python -m pip install redisgraph
+            python -m pip install -r tests/requirements.txt
 
       # Validate source complies with formatting
       #- run:
@@ -87,13 +93,13 @@ jobs:
           name: Test for memory leaks
           command: |
               # Replace the default Redis server with one linked to libc malloc rather than jemalloc.
-              git clone https://github.com/antirez/redis.git; cd redis; git checkout 5.0.7; make valgrind; make install; cd ..
-              make clean; DEBUG=1 make # Rebuild module at O0
+              git clone https://github.com/antirez/redis.git; cd redis; git checkout 6.0.1; make valgrind; make install; cd ..
+              make clean; make DEBUG=1 # Rebuild module at O0
               make memcheck # Re-run the test suite, failing if definite memory leaks have been introduced.
 
   package_branch:
     docker:
-      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
+      - image: 'redisfab/rmbuilder:6.0.1-x64-bionic'
     steps:
       - attach_workspace:
           at: /workspace
@@ -111,7 +117,7 @@ jobs:
           path: /workspace/build
   package_release:
     docker:
-      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
+      - image: 'redisfab/rmbuilder:6.0.1-x64-bionic'
     steps:
       - attach_workspace:
           at: /workspace
@@ -135,7 +141,7 @@ jobs:
           path: /workspace/build
   deploy_to_s3:
     docker:
-      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
+      - image: 'redisfab/rmbuilder:6.0.1-x64-bionic'
     steps:
       - attach_workspace:
           at: /workspace
@@ -167,7 +173,7 @@ jobs:
             aws s3 cp site s3://oss.redislabs.com/$WEBSITE_FOLDER/ --acl public-read --recursive
   run_automation:
     docker:
-      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
+      - image: 'redisfab/rmbuilder:6.0.1-x64-bionic'
     steps:
       - run:
           name: Run QA Automation
