--- a/src/Makefile
+++ b/src/Makefile
@@ -63,17 +63,12 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/entities/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/with_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/with_server_events/*/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/without_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/without_server_events/*/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/*/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/current/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/current/*/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/prev/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/prev/*/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/with_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/with_server_events/*/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/without_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/without_server_events/*/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/GraphBLASExt/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
