--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ jobs:
       - run:
           name: Package
           command: >-
-            ramp pack -m /workspace/ramp.yml -o
+            python -m RAMP.ramp pack -m /workspace/ramp.yml -o
             /workspace/build/$PACKAGE_NAME.{os}-{architecture}.$CIRCLE_BRANCH.zip
             /workspace/$MODULE_ARTIFACT
       - persist_to_workspace:
@@ -124,13 +124,13 @@ jobs:
       - run:
           name: Package
           command: >-
-            ramp pack -m /workspace/ramp.yml -o
+            python -m RAMP.ramp pack -m /workspace/ramp.yml -o
             /workspace/build/$PACKAGE_NAME.{os}-{architecture}.{semantic_version}.zip
             /workspace/$MODULE_ARTIFACT
       - run:
           name: Package
           command: >-
-            ramp pack -m /workspace/ramp.yml -o
+            python -m RAMP.ramp pack -m /workspace/ramp.yml -o
             /workspace/build/$PACKAGE_NAME.{os}-{architecture}.latest.zip
             /workspace/$MODULE_ARTIFACT
       - persist_to_workspace:
