--- a/ramp.yml
+++ b/ramp.yml
@@ -12,6 +12,6 @@ capabilities:
     - failover_migrate
     - persistence_rdb
     - persistence_aof
-    - replica_of # Replication requires total memory to be at least 2x the graph's size, only on Redis 5.
+    - replica_of
     - clustering
     - backup_restore
