--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,8 @@ jobs:
               git clone https://github.com/antirez/redis.git; cd redis; git checkout 6.0.1; make valgrind; make install; cd ..
               make clean; make DEBUG=1 # Rebuild module at O0
               make memcheck # Re-run the test suite, failing if definite memory leaks have been introduced.
+          environment:
+            RS_GLOBAL_DTORS: 1
 
   package_branch:
     docker:
