Fix false positives on leak checking

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -37,6 +37,7 @@ tck:
 	### Cypher Technology Compatibility Kit (TCK)
 	@$(MAKE) -C tck TEST_ARGS="$(TEST_ARGS)"
 
+memcheck: export RS_GLOBAL_DTORS = 1
 memcheck:
 	@$(MAKE) -C flow TEST_ARGS="$(MEMCHECK_ARGS)"
 	@$(MAKE) -C tck TEST_ARGS="$(MEMCHECK_ARGS)"
