--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Fetch all tags
+      run: git fetch -t
     - name: Set up Python 3.x
       uses: actions/setup-python@v1
       with:
