--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,8 +175,9 @@ jobs:
           command: >-
             apt-get update &&
             apt-get -y install curl &&
-            curl -k -u $QA_AUTOMATION_USERNAME:$QA_AUTOMATION_PASS -X POST
+            curl -k -X POST
             -H "Content-Type: application/json"
+            -H "Authorization: Bearer $QA_AUTOMATION_ACCESS_TOKEN"
             -d '{"service_id":"single_module_test_cycle_sanity_and_extended", "name":"redisgraph automation-testing", "properties":{"sut_version":"5.6.0", "email_recipients":"graph@redislabs.com", "sut_environments":[], "tools_environment":{}, "module_name": "RedisGraph", "module_version":"master", "cycle_environments_setup":[{"teardown":true, "name":"rhel7.5-x86_64-aws", "concurrency":1}, {"teardown":true, "name":"bionic-amd64-aws", "concurrency":1}]}}'
             https://qa-automation-center.redislabs.com/processes
 
