--- a/src/Makefile
+++ b/src/Makefile
@@ -13,9 +13,11 @@ LIBCYPHER-PARSER_DIR = ../deps/libcypher-parser/lib/src
 # if DEBUG env var is set, we compile with "debug" cflags
 DEBUGFLAGS = -g -ggdb -O3 
 GRAPHBLAS_CMAKE_OPTIONS ="-DCMAKE_C_COMPILER='$(CC)'"
-ifeq ($(DEBUG), 1)
+REDISEARCH_CMAKE_OPTIONS = "-DRS_FORCE_NO_GITVERSION=ON -DRS_BUILD_STATIC=ON"
+ifeq ($(DEBUG),1)
 	DEBUGFLAGS = -fno-omit-frame-pointer -g -ggdb -O0
 	GRAPHBLAS_CMAKE_OPTIONS += " -DCMAKE_BUILD_TYPE=Debug"
+	REDISEARCH_CMAKE_OPTIONS += " -DCMAKE_BUILD_TYPE=Debug"
 endif
 
 # Default CFLAGS
@@ -149,7 +151,7 @@ ifeq (,$(wildcard $(REDISEARCH)))
 	cd ../deps/RediSearch; \
 	mkdir build; \
 	cd build; \
-	cmake -DRS_FORCE_NO_GITVERSION=ON -DRS_BUILD_STATIC=ON ..; \
+	cmake $(REDISEARCH_CMAKE_OPTIONS) ..; \
 	make;
 endif
 .PHONY: $(REDISEARCH)
