--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,6 @@
 # find the OS
 uname_S := $(shell sh -c 'uname -s 2>/dev/null || echo not')
 
-# store absolute path to RedisGraph Makefile location
-abs_path = $(shell pwd)
-
 # Paths to deps.
 RAX_DIR = ../deps/rax
 XXHASH_DIR = ../deps/xxHash
@@ -11,7 +8,7 @@ REDISEARCH_DIR = ../deps/RediSearch/src
 LIBCYPHER-PARSER_DIR = ../deps/libcypher-parser/lib/src
 
 # if DEBUG env var is set, we compile with "debug" cflags
-DEBUGFLAGS = -g -ggdb -O3 
+DEBUGFLAGS = -g -ggdb -O3
 ifeq ($(DEBUG), 1)
 	DEBUGFLAGS = -fno-omit-frame-pointer -g -ggdb -O0
 endif
@@ -120,7 +117,7 @@ endif
 # Compile C file while generating a .d file for it
 %.o: %.c
 %.o: %.c
-	$(REDISGRAPH_CC) $(CFLAGS) -I$(RAX_DIR) -I$(LIBCYPHER-PARSER_DIR) -I$(XXHASH_DIR) -I$(REDISEARCH_DIR) -c $< -o $@ -MMD -MF $(@:.o=.d)
+	$(REDISGRAPH_CC) $(CFLAGS) -I. -I$(RAX_DIR) -I$(LIBCYPHER-PARSER_DIR) -I$(XXHASH_DIR) -I$(REDISEARCH_DIR) -c $< -o $@ -MMD -MF $(@:.o=.d)
 
 all: redisgraph.so
 
@@ -162,7 +159,7 @@ ifeq (,$(wildcard $(LIBCYPHER-PARSER)))
 endif
 .PHONY: $(LIBCYPHER-PARSER)
 
-# Compile query parse. 
+# Compile query parse.
 # This is not included in the usual make target!
 parser:
 	@$(MAKE) -C $@
