--- a/ramp.yml
+++ b/ramp.yml
@@ -7,6 +7,7 @@ license: Redis Source Available License Agreement
 command_line_args: ""
 min_redis_version: "5.0.7"
 min_redis_pack_version: "5.4.14"
+config_command: "GRAPH.CONFIG SET"
 capabilities:
     - types
     - failover_migrate
@@ -16,3 +17,5 @@ capabilities:
     - replica_of
     - backup_restore
     - no_multi_key
+exclude_commands:
+    - GRAPH.CONFIG
