--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ commands:
           name: Setup automation
           command: |
             (mkdir -p deps; cd deps; git clone https://github.com/RedisLabsModules/readies.git)
-            PIP=1 ./deps/readies/bin/getpy2
-            python2 -m pip install -r ./deps/readies/paella/requirements.txt
+            PIP=1 ./deps/readies/bin/getpy3
+            python3 -m pip install -r ./deps/readies/paella/requirements.txt
 
 jobs:
   build:
@@ -41,13 +41,13 @@ jobs:
             apt-get install -y --no-install-recommends ca-certificates wget git
             apt-get install -y --no-install-recommends python python-pip python-psutil
             apt-get install -y --no-install-recommends build-essential cmake m4 automake autoconf libtool peg libgomp1 valgrind astyle
-            python -m pip install wheel
-            python -m pip install setuptools --upgrade
+            python3 -m pip install wheel
+            python3 -m pip install setuptools --upgrade
             # stick to strict order in the following pakcages:
-            python -m pip install git+https://github.com/Grokzen/redis-py-cluster.git@master
-            python -m pip install git+https://github.com/RedisLabsModules/RLTest.git@master
-            python -m pip install git+https://github.com/RedisLabs/RAMP@master
-            python -m pip install -r tests/requirements.txt
+            python3 -m pip install git+https://github.com/Grokzen/redis-py-cluster.git@master
+            python3 -m pip install git+https://github.com/RedisLabsModules/RLTest.git@master
+            python3 -m pip install git+https://github.com/RedisLabs/RAMP@master
+            python3 -m pip install -r tests/requirements.txt
 
       - setup-automation
 
