--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - image: 'redisfab/rmbuilder:6.0.9-x64-bionic'
         environment:
             LANG: en_US.UTF-8  
-            LANGUAGE: en_US:en  
+            LANGUAGE: en_US.UTF-8
             LC_ALL: en_US.UTF-8     
     steps:
       - checkout
@@ -49,13 +49,15 @@ jobs:
             python3 -m pip install setuptools --upgrade
             # stick to strict order in the following pakcages:
             python3 -m pip install git+https://github.com/Grokzen/redis-py-cluster.git@master
-            python3 -m pip install git+https://github.com/RedisLabsModules/RLTest.git@master
+            python3 -m pip install --ignore-installed git+https://github.com/RedisLabsModules/RLTest.git@master
             python3 -m pip install git+https://github.com/RedisLabs/RAMP@master
             python3 -m pip install -r tests/requirements.txt
 
       - run:
           name: Setup locale
-          command: dpkg-reconfigure locales
+          command: |
+              locale-gen --purge en_US.UTF-8
+              dpkg-reconfigure -f noninteractive locales
 
       - setup-automation
 
